# auths

./: .capsec-baseline.json  .capsec.toml  .clippy.toml  .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .spectral.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASES.md  SECURITY.md  SPEC.md  TESTING.md  cbindgen.toml  clippy.toml  deny.toml  epicb-test.txt  index.html  justfile  login_spec.md  mkdocs.yml  objects.inv  sitemap.xml
crates/auths-anchor/: Cargo.toml
crates/auths-anchor/src/: accept.rs  duplicity.rs  error.rs  finalize.rs  freshness.rs  kel_seal.rs  keystate.rs  lib.rs  store.rs  types.rs  verify.rs
crates/auths-anchor/tests/: integration.rs
crates/auths-api/: Cargo.toml
crates/auths-api/src/: app.rs  control_plane.rs  error.rs  lib.rs  main.rs  middleware.rs  persistence.rs  rp_auth.rs
crates/auths-api/tests/: control_plane_http.rs  integration.rs
crates/auths-auth-server/: Cargo.toml  openapi.yaml
crates/auths-auth-server/fuzz/: Cargo.toml
crates/auths-auth-server/migrations/: 001_init.sql  002_rfc7591_clients.sql
crates/auths-auth-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/auths-auth-server/static/: index.html
crates/auths-auth-server/tests/: integration.rs
crates/auths-checkpoint-cosigner/: Cargo.toml  README.md
crates/auths-checkpoint-cosigner/src/: lib.rs  main.rs
crates/auths-cli/: Cargo.toml  README.md  clippy.toml
crates/auths-cli/src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs  subprocess.rs  telemetry.rs
crates/auths-cli/tests/: integration.rs
crates/auths-core/: Cargo.toml  README.md  build.rs  cbindgen.toml  clippy.toml
crates/auths-core/benches/: crypto.rs
crates/auths-core/examples/: secure_enclave_probe.rs
crates/auths-core/src/: config.rs  error.rs  keri_did.rs  lib.rs  paths.rs  proto.rs  server.rs  signing.rs  utils.rs  validated_identity_did.rs
crates/auths-core/swift/: SecureEnclaveBridge.swift
crates/auths-core/tests/: integration.rs  passphrase_cache_manual.rs
crates/auths-crypto/: Cargo.toml  README.md  clippy.toml
crates/auths-crypto/src/: aws_lc_provider.rs  cnsa_provider.rs  did_key.rs  error.rs  hash256.rs  keri.rs  key_material.rs  key_ops.rs  lib.rs  pkcs8.rs  provider.rs  ring_provider.rs  secret.rs  ssh.rs  suite.rs  testing.rs  webcrypto_provider.rs
crates/auths-crypto/tests/: wasm_provider.rs
crates/auths-evidence/: Cargo.toml
crates/auths-evidence/schemas/: audit-v1.json  duplicity-proof-v1.json  receipts-v1.json
crates/auths-evidence/src/: anchor.rs  attestation.rs  bundle.rs  error.rs  judge.rs  kel_wire.rs  lib.rs  resolve_chain.rs  reversal.rs  types.rs  verify_spend.rs
crates/auths-id/: Cargo.toml  README.md  clippy.toml
crates/auths-id/benches/: registry.rs
crates/auths-id/src/: agent_identity.rs  domain_separation.rs  error.rs  freeze.rs  lib.rs  trailer.rs  witness.rs  witness_config.rs
crates/auths-index/: Cargo.toml  README.md
crates/auths-index/src/: error.rs  index.rs  lib.rs  rebuild.rs  schema.rs
crates/auths-infra-git/: Cargo.toml
crates/auths-infra-git/src/: audit.rs  blob_store.rs  error.rs  event_log.rs  helpers.rs  lib.rs  ref_store.rs  repo.rs
crates/auths-infra-http/: Cargo.toml
crates/auths-infra-http/src/: async_witness_client.rs  claim_client.rs  error.rs  github_gist.rs  github_oauth.rs  github_ssh_keys.rs  identity_resolver.rs  lib.rs  npm_auth.rs  oidc_platforms.rs  oidc_tsa_client.rs  oidc_validator.rs  oobi_resolver.rs  pairing_client.rs  platform_context.rs  registry_client.rs  request.rs  ssrf.rs  witness_client.rs
crates/auths-infra-rekor/: Cargo.toml
crates/auths-infra-rekor/src/: client.rs  error.rs  lib.rs  types.rs
crates/auths-infra-rekor/tests/: integration.rs
crates/auths-jwt/: Cargo.toml
crates/auths-jwt/src/: claims.rs  lib.rs
crates/auths-keri/: Cargo.toml  README.md
crates/auths-keri/docs/: epics.md  spec_compliance_audit.md
crates/auths-keri/fuzz/: Cargo.toml
crates/auths-keri/src/: acdc.rs  acdc_capability_schema.json  capability.rs  cesr_encode.rs  codec.rs  crypto.rs  did_webs.rs  error.rs  event.rs  events.rs  ipex.rs  kel_io.rs  keys.rs  ksn.rs  lib.rs  messages.rs  oobi.rs  quic_transport.rs  roundtrip.rs  said.rs  state.rs  stream.rs  tel.rs  tls_cert.rs  types.rs  validate.rs  version.rs
crates/auths-mcp-core/: Cargo.toml
crates/auths-mcp-core/src/: audit.rs  budget.rs  channel.rs  gate.rs  lib.rs  money.rs  rail.rs  receipt.rs  session.rs  treasury.rs
crates/auths-mcp-gateway/: Cargo.toml
crates/auths-mcp-gateway/src/: chain.rs  channel.rs  inproc_sign.rs  main.rs  metrics_http.rs  proxy.rs  replay.rs  spend_log.rs  transcript.rs  treasury.rs
crates/auths-mcp-server/: Cargo.toml
crates/auths-mcp-server/src/: auth.rs  capsec_guard.rs  config.rs  error.rs  jwks.rs  keri_auth.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs  tools.rs  types.rs
crates/auths-mobile-ffi/: .gitignore  Cargo.toml  README.md
crates/auths-mobile-ffi/src/: auth_challenge_context.rs  delegated_inception_context.rs  device_kel_rotation.rs  identity_context.rs  kel_verification.rs  lib.rs  pairing_context.rs  shared_kel_context.rs  signature.rs
crates/auths-mobile-ffi/tests/: icp_event_drift.rs
crates/auths-monitor/: Cargo.toml  README.md
crates/auths-monitor/src/: evidence.rs  gossip.rs  lib.rs  main.rs  spend_anchor.rs
crates/auths-oidc-bridge/: Cargo.toml  README.md
crates/auths-oidc-bridge/src/: audience.rs  config.rs  cross_reference.rs  error.rs  github_oidc.rs  issuer.rs  jwks.rs  lib.rs  main.rs  policy_adapter.rs  rate_limit.rs  routes.rs  spiffe.rs  state.rs  token.rs
crates/auths-oidc-port/: Cargo.toml  README.md
crates/auths-pairing-daemon/: Cargo.toml  README.md
crates/auths-pairing-protocol/: Cargo.toml
crates/auths-pam/: Cargo.toml
crates/auths-pam/src/: lib.rs
crates/auths-policy/: Cargo.toml  README.md
crates/auths-radicle/: Cargo.toml  README.md
crates/auths-receipts/: Cargo.toml
ee/: Cargo.toml  LICENSE  README.md
ee/auths-idp/: Cargo.toml
(+4631 files in other folders)
