[workspace]
resolver = "3"
members = [
  "crates/auths",
  "crates/auths-core",
  "crates/auths-cli",
  "crates/auths-id",
  "crates/auths-index",
  "crates/auths-policy",
  "crates/auths-verifier",
  "crates/auths-telemetry",
  "crates/auths-crypto",
  "crates/auths-sdk",
  "crates/auths-infra-git",
  "crates/auths-infra-http",
  "crates/auths-storage",
  "crates/auths-transparency",
  "crates/auths-keri",
  "crates/auths-jwt",
  "crates/auths-mcp-server",
  "crates/auths-pairing-daemon",
  "crates/auths-pairing-protocol",
  "crates/auths-radicle",
  "crates/auths-scim",
  "crates/auths-utils",
  "crates/auths-oidc-port",
  "crates/xtask", "crates/auths-api",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.93"
repository = "https://github.com/auths-dev/auths"
homepage = "https://github.com/auths-dev/auths"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bs58 = "0.5.1"
ring = "0.17.14"
base64 = "0.22.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
glob = "0.3"
parking_lot = "0.12"
schemars = "0.8"
subtle = "2.6"
zeroize = { version = "1.8.1", features = ["serde", "derive"] }
# Exact pin: canonicalization changes silently break all existing attestation signatures.
json-canon = "=0.1.3"

auths-core = { path = "crates/auths-core", version = "0.1.0" }
auths-keri = { path = "crates/auths-keri", version = "0.1.0" }
auths-id = { path = "crates/auths-id", version = "0.1.0" }
auths-verifier = { path = "crates/auths-verifier", version = "0.1.0", default-features = false }
auths-policy = { path = "crates/auths-policy", version = "0.1.0" }
auths-index = { path = "crates/auths-index", version = "0.1.0" }
auths-telemetry = { path = "crates/auths-telemetry", version = "0.1.0" }
auths-crypto = { path = "crates/auths-crypto", version = "0.1.0", default-features = false }
auths-sdk = { path = "crates/auths-sdk", version = "0.1.0" }
auths-infra-git = { path = "crates/auths-infra-git", version = "0.1.0" }
auths-infra-http = { path = "crates/auths-infra-http", version = "0.1.0" }
auths-jwt = { path = "crates/auths-jwt", version = "0.1.0" }
auths-pairing-daemon = { path = "crates/auths-pairing-daemon", version = "0.1.0" }
auths-pairing-protocol = { path = "crates/auths-pairing-protocol", version = "0.1.0" }
auths-storage = { path = "crates/auths-storage", version = "0.1.0" }
auths-transparency = { path = "crates/auths-transparency", version = "0.1.0", default-features = false }
auths-utils = { path = "crates/auths-utils", version = "0.1.0" }
insta = { version = "1", features = ["json"] }

# Compile crypto-heavy crates with optimizations even in dev/test builds.
# Without this, Argon2id key derivation (m=64 MiB, t=3) takes ~5-10s per
# call in unoptimized builds, causing E2E test timeouts on CI runners.

[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.chacha20poly1305]
opt-level = 3
[profile.dev.package.aes-gcm]
opt-level = 3
[profile.dev.package.ring]
opt-level = 3

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"
dbg_macro = "deny"
disallowed_methods = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
