[package]
name = "auths-anchor"
version.workspace = true
edition = "2024"
rust-version = "1.93"
license.workspace = true
description = "Auths Witness Network protocol core: spend-anchor acceptance, duplicity proofs, threshold finalization, and freshness"
repository.workspace = true
homepage.workspace = true

[lib]
name = "auths_anchor"
path = "src/lib.rs"

[dependencies]
# Pure, WASM-safe cores only (no-default-features): the AWN protocol core is
# I/O-free (D3). KEL resolution, storage, and HTTP live above it in the node/SDK.
auths-crypto = { workspace = true }
auths-keri = { workspace = true }
auths-transparency = { workspace = true }
# Names the checkpoint key/signature types `SignedCheckpoint` carries (the same
# WASM-safe core `auths-rp` builds on) — verification stays offline and pure.
auths-verifier = { workspace = true }

# Sync, pure-Rust signature verification (byte-for-byte parity with the shipped
# verifier's own p256/ed25519-dalek path). Curve is carried in-band and
# dispatched on `CurveType` — never on length. Both are WASM-safe; pins match
# `auths-verifier`/`auths-keri`.
ed25519-dalek = { version = "2", default-features = false }
p256 = { version = "=0.13.2", features = ["ecdsa"] }

base64.workspace = true
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
json-canon.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true

# On wasm32-unknown-unknown, the transitive `getrandom` needs its browser
# backend — the same shim the workspace's WASM verifier already applies. The
# verification half is pure; this only wires the RNG stub the target requires.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
# No default features: the whole crate is the pure protocol core. The
# verification half (freshness, finalized-anchor verification, duplicity-proof
# verification) is WASM-safe; the acceptance rule is pure but node-facing. Kept
# flag-free so `cargo check --target wasm32-unknown-unknown` exercises the real
# surface.
default = []
# Exposes the deterministic, fixed-seed finalized-anchor fixtures (the same
# builders the in-crate unit tests use) to downstream test crates such as
# `auths-evidence`. Never enabled in a production build.
test-support = []

[dev-dependencies]
# Deterministic (fixed-seed) key material for tests — no RNG, so vectors are
# reproducible. `ed25519-dalek`/`p256` signing come from the primary deps.
p256 = { version = "=0.13.2", features = ["ecdsa"] }

[lints]
workspace = true
