[package]
name = "auths-api"
edition = "2021"
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "auths-api"
path = "src/main.rs"

[dependencies]
# Auths workspace crates
auths-id = { workspace = true }
auths-crypto = { workspace = true }
auths-sdk = { workspace = true }
auths-core = { workspace = true }
auths-policy = { workspace = true }
auths-storage = { workspace = true }

# HTTP & async
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", features = ["util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Crypto & hashing
ring = { workspace = true }
base64 = { workspace = true }
sha2.workspace = true
subtle = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Telemetry
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde_json = "1"

[lints]
workspace = true
