[package]
name = "auths-auth-server"
version.workspace = true
license.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "auths-auth-server"
path = "src/main.rs"

[lib]
name = "auths_auth_server"
path = "src/lib.rs"

[dependencies]
auths-id.workspace = true
auths-storage = { workspace = true, features = ["backend-git"] }
auths-telemetry.workspace = true
auths-crypto.workspace = true
auths-verifier.workspace = true
git2 = "0.20"

argon2 = "0.5"
base64.workspace = true
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
json-canon = "0.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
ring.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
auths-core.workspace = true
bs58 = "0.5"
futures = "0.3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
