[package]
name = "auths-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for Auths decentralized identity system"
publish = true
license.workspace = true
repository = "https://github.com/bordumb/auths"
readme = "README.md"
keywords = ["cli", "identity", "did", "cryptography", "git"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[[bin]]
name = "auths"
path = "src/main.rs"

[[bin]]
name = "auths-sign"
path = "src/bin/sign.rs"

[[bin]]
name = "auths-verify"
path = "src/bin/verify.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
console = "0.16.2"
dialoguer = "0.12.0"
anyhow = "1"
hex = "0.4.3"
auths-core = { workspace = true, features = ["witness-server"] }
auths-id = { workspace = true, features = ["witness-client", "indexed-storage"] }
auths-storage = { workspace = true, features = ["backend-git"] }
auths-policy.workspace = true
auths-index.workspace = true
auths-crypto.workspace = true
auths-sdk.workspace = true
auths-telemetry.workspace = true
auths-verifier.workspace = true
auths-infra-git.workspace = true
auths-infra-http.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ring.workspace = true
base64.workspace = true
bs58 = "0.5.1"
git2 = "0.20.4"
dirs = "6.0.0"
chrono = "0.4.40"
jsonschema = "0.43.0"
rpassword = "7.3.1"
log = "0.4.27"
json-canon = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
ssh-key = "0.6"
pkcs8 = "0.10"
der = { version = "0.7", features = ["oid"] }
env_logger = "0.11.8"
config = { version = "0.15.19", features = ["toml"] }
toml = "1.0.2"
sha2 = "0.10"
tempfile = "3"
thiserror.workspace = true
zeroize = "1.8"
reqwest = { version = "0.13.2", features = ["json", "form"] }
url = "2.5"
which = "8.0.0"
open = "5"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
indicatif = "0.18.4"

# LAN pairing (optional, default-on)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
mdns-sd = { version = "0.18.0", optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
default = ["lan-pairing"]
lan-pairing = ["dep:axum", "dep:tower", "dep:tower-http", "dep:mdns-sd", "dep:tokio-util"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
auths-test-utils.workspace = true
assert_cmd = "2"
tempfile = "3"
predicates = "2"
