[package]
name = "auths-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for Auths decentralized identity system"
publish = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cli", "identity", "did", "cryptography", "git"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[[bin]]
name = "auths"
path = "src/main.rs"

[[bin]]
name = "auths-sign"
path = "src/bin/sign.rs"

[[bin]]
name = "auths-verify"
path = "src/bin/verify.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
console = "0.16.2"
dialoguer = "0.12.0"
anyhow = "1"
hex = "0.4.3"
gethostname = "0.4"
glob.workspace = true
auths-core = { workspace = true, features = ["witness-server"] }
auths-id = { workspace = true, features = ["witness-client", "indexed-storage"] }
auths-storage = { workspace = true, features = ["backend-git"] }
auths-policy.workspace = true
auths-index.workspace = true
auths-crypto.workspace = true
auths-sdk.workspace = true
auths-transparency = { workspace = true, features = ["native"] }
auths-pairing-protocol.workspace = true
auths-telemetry = { workspace = true, features = ["sink-http"] }
auths-verifier = { workspace = true, features = ["native"] }
auths-infra-git.workspace = true
auths-infra-http.workspace = true
auths-utils.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ring.workspace = true
base64.workspace = true
bs58 = "0.5.1"
git2.workspace = true
dirs = "6.0.0"
chrono = "0.4.40"
jsonschema = { version = "0.42.2", default-features = false }
rpassword = "7.3.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
pkcs8 = "0.10"
der = { version = "0.7", features = ["oid"] }
env_logger = "0.11.8"
config = { version = "0.15.19", features = ["toml"] }
toml = "1.0.2"
sha2 = "0.10"
tempfile = "3"
thiserror.workspace = true
zeroize = "1.8"
reqwest = { version = "0.13.2", features = ["json", "form", "blocking"] }
ssh-key = "0.6"
url = "2.5"
which = "8.0.0"
open = "5"
indicatif = "0.18.4"

# LAN pairing (optional, default-on)
auths-pairing-daemon = { workspace = true, optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
default = ["lan-pairing"]
lan-pairing = ["dep:auths-pairing-daemon", "dep:axum", "dep:tokio-util"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
auths-crypto = { workspace = true, features = ["test-utils"] }
auths-verifier = { workspace = true, features = ["test-utils"] }
assert_cmd = "2"
tempfile = "3"
predicates = "2"
insta = { workspace = true }

[lints]
workspace = true
