[package]
name = "auths-cli"
version.workspace = true
edition = "2024"
description = "Command-line interface for Auths decentralized identity system"
publish = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cli", "identity", "did", "cryptography", "git"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[[bin]]
name = "auths"
path = "src/main.rs"

[[bin]]
name = "auths-sign"
path = "src/bin/sign.rs"

[[bin]]
name = "auths-verify"
path = "src/bin/verify.rs"

[dependencies]
# `tls-cert` powers `auths tls-cert` (KEL-rooted X.509 leaf certs for TLS
# composition); `quic` carries the same leaf + channel binding over QUIC/HTTP3.
# The wire/crypto definition lives in auths-keri.
auths-keri = { workspace = true, features = ["tls-cert", "quic"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3.1.1"
console = "0.16.2"
dialoguer = "0.12.0"
anyhow = "1"
hex = "0.4.3"
gethostname = "1.1.0"
glob.workspace = true
auths-policy.workspace = true
auths-index.workspace = true
auths-crypto.workspace = true
auths-sdk = { workspace = true, features = ["backend-git", "witness-server", "witness-client", "indexed-storage", "keychain-secure-enclave"] }
auths-transparency = { workspace = true, features = ["native"] }
# Pure protocol core for `auths anchor verify` — offline duplicity-proof
# re-verification, no witness contacted, no registry consulted.
auths-anchor.workspace = true
auths-pairing-protocol.workspace = true
auths-telemetry = { workspace = true, features = ["sink-http"] }
auths-verifier = { workspace = true, features = ["native"] }
auths-infra-git.workspace = true
auths-infra-http.workspace = true
auths-infra-rekor = { path = "../auths-infra-rekor", version = "0.1.12" }
auths-rp = { path = "../auths-rp", version = "0.1.12" }
auths-scim-server = { path = "../auths-scim-server", version = "0.1.12" }
auths-utils.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ring.workspace = true
base64.workspace = true
bs58 = "0.5.1"
git2.workspace = true
dirs = "6.0.0"
chrono = "0.4.40"
jsonschema = { version = "0.45.0", default-features = false }
rand = "0.9"
rpassword = "7.3.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
pkcs8 = "0.10"
der = { version = "0.8.0", features = ["oid"] }
env_logger = "0.11.8"
config = { version = "0.15.19", features = ["toml"] }
toml = "1.0.2"
sha2.workspace = true
tempfile = "3"
thiserror.workspace = true
zeroize.workspace = true
reqwest = { version = "0.13.2", features = ["json", "form", "blocking"] }
ssh-key = "0.6"
url = "2.5"
which = "8.0.0"
open = "5"
indicatif = "0.18.4"

# LAN pairing (optional, default-on)
auths-pairing-daemon = { workspace = true, optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

# Witness-node operator surface (optional, default-OFF). The `auths witness`
# subcommand *surface* always compiles (thin clap defs, no heavy deps); only the
# node *handler* and this crate are feature-gated, so the lean default install
# stays lean. The dependency arrow is one-way: this crate composes the node
# crate, never the reverse.
auths-witness-node = { workspace = true, optional = true }

[features]
default = ["lan-pairing"]
lan-pairing = ["dep:auths-pairing-daemon", "dep:axum", "dep:tokio-util", "auths-sdk/lan-pairing"]
# Enables the real `auths witness up|down|status|register|logs` handlers by
# pulling the node-operator crate. A build without it keeps these verbs (help
# and parsing are identical) but the handlers return a "install the witness
# build" error.
witness-node = ["dep:auths-witness-node"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
auths-crypto = { path = "../auths-crypto", features = ["test-utils"] }
auths-verifier = { path = "../auths-verifier", features = ["test-utils"] }
auths-test-utils = { path = "../auths-test-utils" }
assert_cmd = "2"
tempfile = "3"
predicates = "2"
insta = { workspace = true }

[lints]
workspace = true
