[package]
name = "auths-crypto"
version.workspace = true
edition = "2024"
publish = true
license.workspace = true
description = "Cryptographic primitives for Auths: KERI key parsing and DID:key encoding"
keywords = ["cryptography", "ed25519", "did", "verification", "signing"]
categories = ["cryptography"]
repository.workspace = true
homepage.workspace = true

[features]
default = ["native"]
native = ["dep:ring", "dep:tokio", "dep:p256"]
wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
test-utils = ["dep:ring"]

[dependencies]
async-trait = "0.1"
base64.workspace = true
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.5.1"
hex = "0.4"
js-sys = { version = "0.3", optional = true }
ssh-key = { version = "0.6", features = ["ed25519"] }
thiserror.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
zeroize = { version = "1.8", features = ["derive"] }
# P-256 (secp256r1) for ECDSA key generation and signing.
# Pinned to 0.13: RustCrypto ecosystem, pure Rust (WASM-safe), matches cesride reference.
# ring cannot export SEC1 compressed public keys (33 bytes) which CESR requires.
p256 = { version = "0.13", features = ["ecdsa"], optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["Crypto", "CryptoKey", "SubtleCrypto"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ring.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
